fix gap and top margin  on nav

--- a/src/ui/header/header.module.scss
+++ b/src/ui/header/header.module.scss
@@ -7,8 +7,8 @@
     justify-content: space-between;
 
     @include tablet{
-        width: calc(100% - 2rem);
-        margin-top: 1rem;
+        width: calc(100% - 3rem);
+        margin-top: 1.5rem;
         margin-left: auto;
         margin-right: auto;
         border-radius: 0.625rem;
